--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "comfyui-shadertoygl"
-description = "Nodes:Shadertoy, Shader, ColorChannelOffset."
+description = "This adds a node that can run shader code on a tensor of image nodes. Implemented Nodes:Shadertoy, Shader, ColorChannelOffset."
 version = "1.0.0"
 license = "LICENSE"
 dependencies = ["glfw", "PyOpenGL", "PyOpenGL-accelerate"]
@@ -10,6 +10,6 @@ Repository = "https://github.com/e7mac/ComfyUI-ShadertoyGL"
 #  Used by Comfy Registry https://comfyregistry.org
 
 [tool.comfy]
-PublisherId = ""
+PublisherId = "e7mac"
 DisplayName = "ComfyUI-ShadertoyGL"
 Icon = ""
